<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewMotto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/find_your_tour"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="100%"/>

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textViewMotto"
        android:src="@drawable/tour_header"
        app:layout_heightPercent="40%"
        app:layout_widthPercent="100%"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/please_log_in_msg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/welcome_img"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/please_log_in"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"/>

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/please_log_in_msg"
        android:layout_marginTop="10dp"
        android:background="@color/light_green"
        android:layout_centerInParent="true"
        android:hint="@string/login_username"
        android:nextFocusDown="@+id/passwordEditText"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_heightPercent="11%"
        app:layout_widthPercent="90%"/>

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/usernameLoginEditText"
        android:layout_marginTop="10dp"
        android:background="@color/light_green"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_heightPercent="11%"
        app:layout_widthPercent="90%"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/passwordLoginEditText"
        android:background="@drawable/rounded_clickable_btn"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/full_white"
        android:textSize="18sp"
        android:text="@string/login_btn"
        app:layout_heightPercent="11%"
        app:layout_widthPercent="90%"/>

    <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
        android:id="@+id/loginProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimaryDark"
        android:visibility="invisible" />

</android.support.percent.PercentRelativeLayout>