<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:paddingTop="16dp"
                  android:orientation="horizontal">

        <ImageView android:id="@+id/tour_details_photo"
                   android:layout_width="170dp"
                   android:layout_height="135dp"
                   android:contentDescription="@null"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:gravity="center"
                      android:layout_marginLeft="15dp"
                      android:layout_marginStart="15dp">

            <TextView android:id="@+id/tour_details_name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:textSize="25sp"
                      android:layout_marginBottom="5dp"
                      android:text="Nagy-Kevely"/>

            <TextView android:id="@+id/tour_details_date"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:text="March 15, 2017"/>
        </LinearLayout>

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@color/colorPrimaryDark"
          android:layout_marginBottom="16dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_marginEnd="10dp"
                  android:text="@string/tour_details_distance"/>

        <TextView android:id="@+id/tour_details_distance"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text=""/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text=" km"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="10dp"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_marginEnd="10dp"
                  android:text="@string/tour_details_difficulty"/>

        <TextView android:id="@+id/tour_details_difficulty"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text=""/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="10dp"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_marginEnd="10dp"
                  android:text="@string/tour_details_organizer"/>

        <TextView android:id="@+id/tour_details_organizer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text=""/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="10dp"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_marginEnd="10dp"
                  android:text="@string/tour_details_category"/>

        <TextView android:id="@+id/tour_details_category"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:text=""/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="25dp"
                  android:paddingLeft="16dp"
                  android:paddingRight="16dp"
                  android:orientation="horizontal">

        <TextView android:id="@+id/tour_details_members_number"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:textColor="@color/colorPrimary"
                  android:textStyle="bold"
                  android:layout_marginRight="10dp"
                  android:layout_marginEnd="10dp"
                  android:text=""/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/tour_details_people_joined"/>

    </LinearLayout>

    <Button
            android:id="@+id/join_tour"
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tour_details_connect"
            android:textSize="18sp"
            android:textColor="@color/full_white"
            android:background="@drawable/rounded_clickable_btn"/>

</LinearLayout>